# make_minutes_of_meeting

./: .gitignore  Cargo.toml  LICENSE  README.md  Todo.md
src/: cli.rs  config.rs  lib.rs  log_initializer.rs  main.rs  metadata.rs  mom_opener.rs
src/config/: mod.rs  rich_metadata.rs
src/metadata/: metadata.rs  mod.rs
