[package]
name = "momi"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serde_json = "1.0.116"
whoami = "1.5.1"
log = "0.4.21"
simplelog = "0.12.2"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_derive = "1.0.199"
tempfile = "3.10.1"
